version/0.15/_sources/User_guide/pyaedt_extensions_doc/project/index.rst.txt
Project extensions
==================

.. grid:: 2

   .. grid-item-card:: Import Nastran
            :link: import_nastran
            :link-type: doc
            :margin: 2 2 0 0
            
            Import a Nastran or STL file in any 3D modeler application.

   .. grid-item-card:: Configure Layout
            :link: configure_edb
            :link-type: doc
            :margin: 2 2 0 0

            Configure layout for PCB & package analysis.

   .. grid-item-card:: Advanced Fields Calculator
            :link: advanced_fields_calculator
            :link-type: doc

            Lear how to use the Advanced Fields Calculator.

   .. grid-item-card:: Kernel converter
            :link: kernel_convert
            :link-type: doc
            :margin: 2 2 0 0

            Lear how to convert projects from 2022R2 to newer versions.

   .. grid-item-card:: Point cloud generator
            :link: point_cloud_generator
            :link-type: doc
            :margin: 2 2 0 0

            Generate and import points list from a geometry.

