version/1.5/_sources/User_guide/pyaedt_extensions_doc/project/index.rst.txt
Project extensions
==================

.. grid:: 2

   .. grid-item-card:: Generate Report
            :link: generate_report
            :link-type: doc
            :margin: 2 2 0 0

            Create a PDF report from the plots in the active AEDT design.

   .. grid-item-card:: Import Nastran
            :link: import_nastran
            :link-type: doc
            :margin: 2 2 0 0

            Import a Nastran or STL file in any 3D modeler application.

   .. grid-item-card:: Configure Layout
            :link: configure_layout
            :link-type: doc
            :margin: 2 2 0 0

            Configure layout for PCB & package analysis.

   .. grid-item-card:: Advanced Fields Calculator
            :link: advanced_fields_calculator
            :link-type: doc

            Lear how to use the Advanced Fields Calculator.

   .. grid-item-card:: Kernel converter
            :link: kernel_convert
            :link-type: doc
            :margin: 2 2 0 0

            Lear how to convert projects from 2022R2 to newer versions.

   .. grid-item-card:: Point cloud generator
            :link: point_cloud_generator
            :link-type: doc
            :margin: 2 2 0 0

            Generate and import points list from a geometry.

   .. grid-item-card:: Via design
            :link: via_design
            :link-type: doc
            :margin: 2 2 0 0

            Generate a parameterized via design.

   .. grid-item-card:: Result Calculator
            :link: result_calculator
            :link-type: doc
            :margin: 2 2 0 0

            Collect, plot and manage result traces.